force-app/main/default/objects/Embryo__c/Embryo__c.object-meta.xml
<CustomObject>
    <label>Embryo</label>
    <nameField>
        <displayFormat>EMBRYO-{0000}</displayFormat>
        <label>Embryo ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Embryos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>