force-app/main/default/objects/Embryo__c/fields/Age_at_Embryo_Creation__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Embryo_Creation__c</fullName>
    <label>Age Of Egg at OPU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>