force-app/main/default/objects/Embryo__c/fields/Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Cell_Number__c</fullName>
    <label>Cell Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>XG</fullName>
            </value>
            <value>
                <fullName>XD</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>FHD</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>frags</fullName>
                <label>Frags</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>