force-app/main/default/objects/Embryo__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MII</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>RZ</fullName>
            </value>
            <value>
                <fullName>EZ</fullName>
            </value>
            <value>
                <fullName>Abn.</fullName>
            </value>
            <value>
                <fullName>No Oocyte (NO)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>