force-app/main/default/objects/Embryo__c/fields/ClinPreg_Outcome_of_Cycle_Emb_Created_In__c.field-meta.xml
<CustomField>
    <fullName>ClinPreg_Outcome_of_Cycle_Emb_Created_In__c</fullName>
    <formula>TEXT(  Embryo_Created_In_Cycle__r.PR_CLIN__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClinPreg Outcome of Cycle Emb Created In</label>
    <type>Text</type>
</CustomField>