force-app/main/default/objects/Embryo__c/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <formula>IF(
ISPICKVAL(Embryo_Status__c , &quot;Transferred&quot;) , True,
IF(
ISPICKVAL(Embryo_Status__c , &quot;Discarded&quot;) , True,

False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed</label>
    <type>Checkbox</type>
</CustomField>