force-app/main/default/objects/Embryo__c/fields/Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day__c</fullName>
    <label>Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>