force-app/main/default/objects/Embryo__c/fields/Cycle_Outcome_of_Embryo_Transfered_in__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Outcome_of_Embryo_Transfered_in__c</fullName>
    <formula>TEXT(Embryo_Cycle_Transferred_In__r.Cycle_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Outcome of Embryo Transfered in</label>
    <type>Text</type>
</CustomField>