force-app/main/default/objects/Embryo__c/fields/Day_1_of_Cycle_Created_In__c.field-meta.xml
<CustomField>
    <fullName>Day_1_of_Cycle_Created_In__c</fullName>
    <formula>Embryo_Created_In_Cycle__r.Day_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 1 of Cycle Created In</label>
    <type>Date</type>
</CustomField>