force-app/main/default/objects/Embryo__c/fields/Day_1_of_Cycle_Transferred_In__c.field-meta.xml
<CustomField>
    <fullName>Day_1_of_Cycle_Transferred_In__c</fullName>
    <formula>Embryo_Cycle_Transferred_In__r.Day_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 1 of Cycle Transferred In</label>
    <type>Date</type>
</CustomField>