force-app/main/default/objects/Embryo__c/fields/Day_3_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Grade__c</fullName>
    <label>Day 3 Grade Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Grading</valueSetName>
    </valueSet>
</CustomField>