force-app/main/default/objects/Embryo__c/fields/Day_3_Other__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Other__c</fullName>
    <label>Day 3 Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Other_Embryo_Values</valueSetName>
    </valueSet>
</CustomField>