force-app/main/default/objects/Embryo__c/fields/Day_5_Fragmentation__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Fragmentation__c</fullName>
    <label>Day 5 Fragmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Fragmentation</valueSetName>
    </valueSet>
</CustomField>