force-app/main/default/objects/Embryo__c/fields/Day_5_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Grade__c</fullName>
    <label>Day 5 Grade Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Grading</valueSetName>
    </valueSet>
</CustomField>