force-app/main/default/objects/Embryo__c/fields/Day_5_Grade_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Grade_Number__c</fullName>
    <label>Day 5 Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>