force-app/main/default/objects/Embryo__c/fields/Day_6_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Cell_Number__c</fullName>
    <label>Day 6 Cell Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>