force-app/main/default/objects/Embryo__c/fields/Egg__c.field-meta.xml
<CustomField>
    <fullName>Egg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg</label>
    <referenceTo>Egg__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>