force-app/main/default/objects/Embryo__c/fields/Egg_Sample__c.field-meta.xml
<CustomField>
    <fullName>Egg_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg Cohort</label>
    <referenceTo>Egg_Sample__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>