force-app/main/default/objects/Embryo__c/fields/Embryo_Auto_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Auto_Number_Display__c</fullName>
    <formula>IF( LEN(TEXT(Embryo_Number__c))=1,&quot;0&quot;&amp; TEXT( Embryo_Number__c ),
TEXT( Embryo_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embryo Auto Number Display</label>
    <type>Text</type>
</CustomField>