force-app/main/default/objects/Embryo__c/fields/Embryo_Batch2__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch2__c</fullName>
    <label>Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Embryos (Embryo Batch)</relationshipLabel>
    <relationshipName>Embryos1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>