force-app/main/default/objects/Embryo__c/fields/Embryo_Created_In_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Created_In_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The cycle in which the embryo was created.</description>
    <label>Embryo Created In Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Embryos (Embryo Created In Cycle)</relationshipLabel>
    <relationshipName>Embryos1</relationshipName>
    <type>Lookup</type>
</CustomField>