force-app/main/default/objects/Embryo__c/fields/Embryo_Cycle_Transferred_In__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Cycle_Transferred_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo Cycle Transferred In</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Embryos (Embryo Cycle Transferred In)</relationshipLabel>
    <relationshipName>Embryos2</relationshipName>
    <type>Lookup</type>
</CustomField>