force-app/main/default/objects/Embryo__c/fields/Embryo_Number__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Number__c</fullName>
    <label>Embryo Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>