force-app/main/default/objects/Embryo__c/fields/Embryo_Status__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Status__c</fullName>
    <label>Fate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>For Transfer</fullName>
            </value>
            <value>
                <fullName>For Freeze</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>PGT Testing In Progress</fullName>
            </value>
            <value>
                <fullName>PGT Locked</fullName>
            </value>
            <value>
                <fullName>For Discard</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Transported</fullName>
            </value>
            <value>
                <fullName>Fertilization</fullName>
                <isActive>false</isActive>
                <label>Fertilization</label>
            </value>
            <value>
                <fullName>Successful</fullName>
                <isActive>false</isActive>
                <label>Successful</label>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
                <isActive>false</isActive>
                <label>Unsuccessful</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>