force-app/main/default/objects/Embryo__c/fields/Embryo_Thaw_Order__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Thaw_Order__c</fullName>
    <label>Embryo Thaw Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>