force-app/main/default/objects/Embryo__c/fields/ET_Scientist__c.field-meta.xml
<CustomField>
    <fullName>ET_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ET Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos7</relationshipName>
    <type>Lookup</type>
</CustomField>