force-app/main/default/objects/Embryo__c/fields/Fertilisation_Status__c.field-meta.xml
<CustomField>
    <fullName>Fertilisation_Status__c</fullName>
    <label>Fertilisation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2PN</fullName>
            </value>
            <value>
                <fullName>1PN</fullName>
            </value>
            <value>
                <fullName>0PN</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>Deg</fullName>
            </value>
            <value>
                <fullName>&gt;2PN</fullName>
                <label>3PN+</label>
            </value>
            <value>
                <fullName>No Oocyte (NO)</fullName>
            </value>
            <value>
                <fullName>RZ</fullName>
            </value>
            <value>
                <fullName>Abn.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>