force-app/main/default/objects/Embryo__c/fields/Fragmentation__c.field-meta.xml
<CustomField>
    <fullName>Fragmentation__c</fullName>
    <label>Fragmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>0+</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>++</fullName>
            </value>
            <value>
                <fullName>+++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>