force-app/main/default/objects/Embryo__c/fields/Freeze_Media__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Media__c</fullName>
    <label>Freeze Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Freeze_Media</valueSetName>
    </valueSet>
</CustomField>