force-app/main/default/objects/Embryo__c/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <label>Grading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>