force-app/main/default/objects/Embryo__c/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <formula>Embryo_Batch2__r.Household__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Id</label>
    <type>Text</type>
</CustomField>