force-app/main/default/objects/Embryo__c/fields/Insem_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Insem_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insem Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos3</relationshipName>
    <type>Lookup</type>
</CustomField>