force-app/main/default/objects/Embryo__c/fields/Insem_Scientist_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Insem_Scientist_is_Me__c</fullName>
    <formula>IF( Insem_Scientist__r.Id =  $User.Id ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insem Scientist is Me</label>
    <type>Checkbox</type>
</CustomField>