force-app/main/default/objects/Embryo__c/fields/Insemination_Type__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Type__c</fullName>
    <label>Insemination Type</label>
    <length>9</length>
    <type>Text</type>
</CustomField>