force-app/main/default/objects/Embryo__c/fields/Notes2__c.field-meta.xml
<CustomField>
    <fullName>Notes2__c</fullName>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>