force-app/main/default/objects/Embryo__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compacting</fullName>
            </value>
            <value>
                <fullName>Uneven</fullName>
            </value>
            <value>
                <fullName>Degenerate</fullName>
            </value>
            <value>
                <fullName>Arrested</fullName>
            </value>
            <value>
                <fullName>Vacuoles</fullName>
            </value>
            <value>
                <fullName>Collapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>