force-app/main/default/objects/Embryo__c/fields/Outcome_of_Cycle_Transferred_in__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Cycle_Transferred_in__c</fullName>
    <formula>TEXT( Embryo_Cycle_Transferred_In__r.PR_CLIN__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClinPreg Outcome of Cycle Transferred in</label>
    <type>Text</type>
</CustomField>