force-app/main/default/objects/Embryo__c/fields/PGT__c.field-meta.xml
<CustomField>
    <fullName>PGT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGT</label>
    <type>Checkbox</type>
</CustomField>