force-app/main/default/objects/Embryo__c/fields/PGT_Reason__c.field-meta.xml
<CustomField>
    <fullName>PGT_Reason__c</fullName>
    <label>PGT Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Aneuploidy screening</fullName>
            </value>
            <value>
                <fullName>2 = Single gene variation</fullName>
            </value>
            <value>
                <fullName>3 = Chromosomal structural rearrangements (e.g. translocations)</fullName>
            </value>
            <value>
                <fullName>4 = Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>