force-app/main/default/objects/Embryo__c/fields/Post_Thaw_Day_5_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Cell_Number__c</fullName>
    <label>Post Thaw Day 5 Cell Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>