force-app/main/default/objects/Embryo__c/fields/Post_Thaw_Day_5_Fragmentation__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Fragmentation__c</fullName>
    <label>Post Thaw Day 5 Fragmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>0+</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>++</fullName>
            </value>
            <value>
                <fullName>+++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>