force-app/main/default/objects/Embryo__c/fields/Post_Thaw_Day_5_Grade__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Grade__c</fullName>
    <label>Post Thaw Day 5 Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Grading</valueSetName>
    </valueSet>
</CustomField>