force-app/main/default/objects/Embryo__c/fields/Post_Thaw_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Expansion__c</fullName>
    <label>Post Thaw Expansion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>