force-app/main/default/objects/Embryo__c/fields/Post_Thaw_Other__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Other__c</fullName>
    <label>Post Thaw Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Collapsed</fullName>
            </value>
            <value>
                <fullName>Degenerate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>