force-app/main/default/objects/Embryo__c/fields/Procedure_Details__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Details__c</fullName>
    <label>Procedure Details</label>
    <type>DateTime</type>
</CustomField>