force-app/main/default/objects/Embryo__c/fields/Related_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>