force-app/main/default/objects/Embryo__c/fields/Scientist__c.field-meta.xml
<CustomField>
    <fullName>Scientist__c</fullName>
    <label>Scientist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCT</fullName>
            </value>
            <value>
                <fullName>VLA</fullName>
            </value>
            <value>
                <fullName>MWY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>