force-app/main/default/objects/Embryo__c/fields/Static_Fate__c.field-meta.xml
<CustomField>
    <fullName>Static_Fate__c</fullName>
    <formula>IF(
    TEXT(Embryo_Status__c) = &quot;Transferred&quot;, &quot;Transferred&quot;,
    IF(
        Embryo_Created_In_Cycle__r.Id = Embryo_Cycle_Transferred_In__r.Id, &quot;Transferred&quot;,
        IF(
            ISBLANK(Embryo_Cycle_Transferred_In__r.Id), TEXT(Embryo_Status__c),
            &quot;Frozen&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Fate</label>
    <type>Text</type>
</CustomField>