force-app/main/default/objects/Embryo__c/fields/Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Date__c</fullName>
    <label>Storage Date</label>
    <type>Date</type>
</CustomField>