force-app/main/default/objects/Embryo__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A12</fullName>
            </value>
            <value>
                <fullName>A13</fullName>
            </value>
            <value>
                <fullName>A14</fullName>
            </value>
            <value>
                <fullName>A15</fullName>
            </value>
            <value>
                <fullName>A16</fullName>
            </value>
            <value>
                <fullName>A17</fullName>
            </value>
            <value>
                <fullName>A18</fullName>
            </value>
            <value>
                <fullName>A19</fullName>
            </value>
            <value>
                <fullName>A20</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>E5</fullName>
            </value>
            <value>
                <fullName>E6</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>E8</fullName>
            </value>
            <value>
                <fullName>E9</fullName>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>