force-app/main/default/objects/Embryo__c/fields/Storage_Location_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Storage_Location__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>