force-app/main/default/objects/Embryo__c/fields/Survivability__c.field-meta.xml
<CustomField>
    <fullName>Survivability__c</fullName>
    <inlineHelpText>Percentage</inlineHelpText>
    <label>Survivability</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>